更改大頭照配色(D96846)

--- a/account/templates/account/member.html
+++ b/account/templates/account/member.html
@@ -18,7 +18,7 @@
     <div class="col-lg-3 col-md-12 ml-10">
       <p class="text-center fz-24">作者資訊</p>
       <img
-        src="https://dummyimage.com/768x768/999/fff.png&text={{UserID.UserID}}"
+        src="https://dummyimage.com/768x768/D96846/fff.png&text={{UserID.UserID}}"
         class="mx-auto d-block img-fluid"
         alt="..."
         style="border-radius: 50%"
