--- a/storyhall/templates/storyhall/story_view.html
+++ b/storyhall/templates/storyhall/story_view.html
@@ -4,7 +4,7 @@
     <div class="col-lg-3 col-sm-12">
       <p class="text-center fz-24">作者資訊</p>
       <img
-        src="https://dummyimage.com/768x768/999/fff.png&text={{ book.author }}"
+        src="https://dummyimage.com/768x768/D96846/fff.png&text={{ book.author }}"
         class="mx-auto d-block img-fluid"
         alt="..."
         style="border-radius: 50%"
