--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    {% load static %}
     <meta charset="utf-8" />
-    <link rel="icon" href="./statics/img/logo.ico" type="image/x-icon" />
+    <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>StoryDream 故事夢</title>
     <meta
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no"
       name="viewport"
     />
-    {% load static %}
+    
     <!-- Google Font -->
     <link
       href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,800"
